<resources>
    <!--    Project-->
    <string name="app_name">Farmer\'s Market</string>
    <string name="order_product_image">TODO</string>
    <string name="description_shopping_cart">Shopping Cart</string>

    <!--    Product item-->
    <string name="product_amount">%1$,.1fkg</string>
    <string name="product_price">%1$,.0fVND/kg</string>
    <string name="product_price_strike_through">&lt;strike>%1$,.0f₫/kg&lt;/strike></string>

    <!--    Order-->
    <string name="order_product_name">Product name</string>
    <string name="order_price">Total price</string>
    <string name="order_status">Status</string>
    <string name="order_button_view">Detail</string>
    <string name="order_title">Order</string>

    <!--    Order detail-->
    <string name="txtOrderEmpty">You have no order</string>
    <string name="txtOrderDetailOrderID">Order ID</string>
    <string name="txtOrderDetailOrderDate">Order date</string>
    <string name="txtOrderDetailStatus">Status</string>
    <string name="txtProductList">Products</string>
    <string name="txtOrderDetailProductTotal">Total product cost</string>
    <string name="txtOrderDetailShippingTotal">Total shipping cost</string>
    <string name="txtOrderDetailTotal">Total cost</string>
    <string name="txtOrderDetailProductName">Product name</string>
    <string name="txtOrderDetailAmount">Amount</string>
    <string name="txtOrderDetailPrice">Price</string>

    <!--    Cart-->
    <string name="cart_product_name">Product name</string>
    <string name="cart_price">Total price</string>
    <string name="cart_total_price_quantity">"Total "</string>
    <string name="cart_price_change">%1$,.0f₫</string>
    <string name="measure">kg</string>
    <string name="txtEmpty">Cart is empty</string>
    <string name="cart_title">Cart</string>

    <!--    Checkout-->
    <string name="txtCheckoutSuccess">Your Order has been accepted</string>
    <string name="btnBackToHome">Back to Home</string>
    <string name="txtCheckoutSuccess2">Your order is on delivering</string>

    <!--    App-->
    <string name="nav_bottom_home">Home</string>
    <string name="nav_bottom_category">Category</string>
    <string name="nav_bottom_order">Order</string>
    <string name="nav_bottom_notification">Notification</string>
    <string name="nav_bottom_account">Account</string>

    <!--    Home-->
    <string name="title_suggestion">Suggestion</string>
    <string name="home_title_trending">Trending!</string>
    <string name="category_fruit">Fruit</string>
    <string name="category_vegetable">Vegetable</string>
    <string name="category_fish_and_seafood"><![CDATA[Fish & Seafood]]></string>
    <string name="category_meat_and_poultry"><![CDATA[Meat & Poultry]]></string>
    <string name="home_see_more">See more</string>
    <string name="home_title_sale">Special Offer!</string>

    <!--    Account-->
    <string name="account_warehouse">My Warehouse</string>
    <string name="account_products">My Products</string>

    <!--    Warehouse-->
    <string name="warehouse_title">My Warehouse</string>
    <string name="warehouse_empty">Look like you do not have any warehouse</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>

    <!--    Login-->
    <string name="btn_login">Log in</string>
    <string name="login_phone_sign_up">Don\'t have an account? &lt;span style="color:#53B175">Sign up&lt;/span></string>
    <string name="login_error_phone">Phone number can\'t be empty</string>
    <string name="login_error_password">Password can\'t be empty!</string>
    <string name="login_error_phone_not_found">Phone number not exist!</string>

    <!--    Checkout-->
    <string name="fragmentCheckoutTxtTitle">Check out</string>
    <string name="fragmentCheckoutTxtShippingUnit">Shipping unit</string>
    <string name="fragmentCheckoutTxtAddress">Address</string>
    <string name="fragmentCheckoutTxtProductCost">Total Product Cost</string>
    <string name="fragmentCheckoutTxtProductCostResult">Total Shipping Cost</string>
    <string name="fragmentCheckoutTxtShippingCost">Shipping Cost</string>
    <string name="fragmentCheckoutTxtShippingCostResult">123</string>
    <string name="fragmentCheckoutTxtTotalCost">Total Cost</string>
    <string name="fragmentCheckoutTxtTotalCostResult">123</string>
    <string name="fragmentCheckoutBtnCheckout">Check out</string>

    <!--    Add Warehouse-->
    <string name="add_warehouse_permission_not_granted">Sorry! We don\'t have permission to open camera</string>
    <string name="add_warehouse_create_success">New warehouse created successfully</string>
    <string name="add_warehouse_title_mode_add">Add Warehouse</string>
    <string name="add_warehouse_edit_success">Warehouse has been updated</string>
    <string name="add_warehouse_title_mode_edit">Edit Warehouse</string>

    <!--    Warehouse Detail-->
    <string name="warehouse_detail_product_title">Products</string>
    <string name="warehouse_detail_no_product">Look like you don\'t have any product in this warehouse</string>

    <!--    Add Product-->
    <string name="add_product_title_mode_add">Add Product</string>
    <string name="add_product_name">Name</string>
    <string name="add_product_original_price">Original Price (VND per kg)</string>
    <string name="add_product_current_price">Current Price (VND per kg)</string>
    <string name="add_product_amount">Amount (kg)</string>
    <string name="add_product_origin">Origin</string>
    <string name="add_product_category">Category</string>
    <string name="add_product_price_less_than_0">Price can\'t be less than 0VND</string>
    <string name="add_product_amount_less_than_0">Amount can\'t be less than 0kg</string>
    <string name="add_product_description">Description</string>
    <string name="add_product_title_mode_edit">Edit Product</string>

    <!--    Product Detail-->
    <string name="product_add_to_cart">Add to Cart</string>
    <string name="product_detail_amount">Available: %1$,.1f kg</string>
    <string name="product_similar_title">Similar</string>

    <!--    Common Error-->
    <string name="error_empty_field">Field can\'t be empty!</string>
    <!--    Dialog-->
    <string name="dialog_title_delete">Delete %1$s?</string>
    <string name="dialog_delete_message">This action cannot be undone</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_delete">Delete</string>
    <!--    Toast-->
    <string name="toast_delete_success">%1$s has been deleted</string>

    <!--    Miscellaneous-->
    <string name="sale_tag">%1$d%%</string>
    <string name="login_phone_title">Log in with your phone number</string>
    <string name="login_phone_hint_phone">Phone number</string>
    <string name="login_phone_next">Next</string>
    <string name="login_phone_title_social_media">Or connect using social media</string>
    <string name="login_phone_login_gg">Log in with Google</string>
    <string name="login_phone_login_fb">Log in with Facebook</string>
    <string name="order_detail_title">Order Detail</string>
    <string name="login_error_password_incorrect">Incorrect password!</string>
    <string name="login_title_forgot_password">Forgot password?</string>
    <string name="login_hint_password">Password</string>
    <string name="login_title_password">Enter your password</string>
    <string name="toast_add_to_cart">Added to Cart</string>
    <string name="add_warehouse_name_title">Name</string>
    <string name="add_warehouse_title_address">Address</string>
    <string name="add_product_title_category">Category</string>
    <string name="add_product_title_picutre">Picture</string>
    <string name="product_detail_title">Product Detail</string>
    <string name="product_detail_account_view_warehouse_btn">View Warehouse</string>
    <string name="home_search_hint">Search</string>
    <string name="account_logout_btn">Log out</string>
    <string name="account_setting">Setting</string>
    <string name="account_shipping_unit">Shipping Unit</string>
    <string name="account_my_profile">My Profile</string>
    <string name="cart_checkout_btn">Check out</string>

</resources>