<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_bottom_home" />
    <item
        android:id="@+id/category_page"
        android:enabled="true"
        android:icon="@drawable/ic_round_view_list_24"
        android:title="@string/nav_bottom_category" />
    <item
        android:id="@+id/order_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/nav_bottom_order" />
    <item
        android:id="@+id/notification_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_bottom_notification" />
    <item
        android:id="@+id/account_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/nav_bottom_account" />
</menu>