<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/order_product_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_product_name" />

            <TextView
                android:id="@+id/order_provider"
                android:layout_width="match_parent"
                android:textSize="10sp"
                android:layout_height="wrap_content"
                android:text="@string/order_provider" />

            <TextView
                android:id="@+id/order_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_price" />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_status" />

            <Button
                android:id="@+id/order_button_view"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/order_button_view" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
        
