<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/app_margin"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/product_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="140dp"
            android:layout_height="match_parent"

            android:contentDescription="@string/order_product_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_product_name" />

            <TextView
                android:id="@+id/order_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_provider"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/order_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_price" />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_status" />

            <Button
                android:id="@+id/order_button_view"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/order_button_view" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>
        
