<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragmentCheckoutTxtTitle"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:textAlignment="textEnd"
            app:srcCompat="@android:drawable/btn_dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragmentCheckoutTxtShippingUnit"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtShippingUnit" />

        <TextView
            android:id="@+id/fragmentCheckoutTxtShippingUnitResult"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="textEnd" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragmentCheckoutTxtAddress"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtAddress" />

        <TextView
            android:id="@+id/fragmentCheckoutTxtAddressResult"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="textEnd" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragmentCheckoutTxtProductCost"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtProductCost" />

        <TextView
            android:id="@+id/fragmentCheckoutTxtProductCostResult"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtProductCostResult"
            android:textAlignment="textEnd"
            android:textColor="#F44336"
            android:textSize="18sp"
            tools:text="123" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragmentCheckoutTxtShippingCost"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtShippingCost" />

        <TextView
            android:id="@+id/fragmentCheckoutTxtShippingCostResult"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtShippingCostResult"
            android:textAlignment="textEnd"
            android:textColor="#F44336"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragmentCheckoutTxtTotalCost"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtTotalCost" />

        <TextView
            android:id="@+id/fragmentCheckoutTxtTotalCostResult"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutTxtTotalCostResult"
            android:textAlignment="textEnd"
            android:textColor="#F44336"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/fragmentCheckoutBtnCheckout" />
    </LinearLayout>

</LinearLayout>