<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/app_margin"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/product_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cart_product_image"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/order_product_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:ignore="MissingClass">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cart_product_name"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageViewDelete"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    app:srcCompat="@android:drawable/btn_dialog" />
            </LinearLayout>

            <TextView
                android:id="@+id/cart_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cart_price"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_total_price_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart_total_price_quantity"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cart_price_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart_price_change"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id="@+id/cart_amount"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    app:backGroundColor="@color/white"
                    app:finalNumber="100"
                    app:initialNumber="1"
                    app:textColor="@color/colorPrimaryDark"
                    app:textSize="6dp"></com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>

                <TextView
                    android:id="@+id/measure"
                    style="@style/heading_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/measure"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>
